*** empty log message ***

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,8 +1,10 @@
 include *.txt
 include CHANGES
 recursive-include examples *.*
+recursive-include examples README*
 recursive-include src *.cpp *.h
 include doc/summon_manual.pdf
+include doc *.html
 include bin/summon
 include bin/summatrix
 include bin/sumtree
