moved FindBounding to Element

--- a/src/Summon/Makefile
+++ b/src/Summon/Makefile
@@ -3,9 +3,11 @@ OBJS = drawCommands.o \
        DrawController.o \
        DrawModel.o \
        DrawView.o \
+       Element.o \
        Graphic.o \
        GroupTable.o \
        Transform.o \
+       TransformMatrix.o \
        Summon.o 
 
 
