--- a/Makefile.win
+++ b/Makefile.win
@@ -39,10 +39,10 @@ OBJS=src/Common/Matrix.obj \
      src/MVC/Input.obj \
      src/MVC/Model.obj \
      src/MVC/StringCommand.obj \
-     src/Summon/drawCommands.obj \
-     src/Summon/DrawController.obj \
-     src/Summon/DrawModel.obj \
-     src/Summon/DrawView.obj \
+     src/Summon/summonCommands.obj \
+     src/Summon/SummonController.obj \
+     src/Summon/SummonModel.obj \
+     src/Summon/SummonView.obj \
      src/Summon/Graphic.obj \
      src/Summon/GroupTable.obj \
      src/Summon/Summon.obj \
@@ -63,10 +63,10 @@ OBJS2=$(BUILD_DIR)/src/Common/Matrix.obj \
       $(BUILD_DIR)/src/MVC/Input.obj \
       $(BUILD_DIR)/src/MVC/Model.obj \
       $(BUILD_DIR)/src/MVC/StringCommand.obj \
-      $(BUILD_DIR)/src/Summon/drawCommands.obj \
-      $(BUILD_DIR)/src/Summon/DrawController.obj \
-      $(BUILD_DIR)/src/Summon/DrawModel.obj \
-      $(BUILD_DIR)/src/Summon/DrawView.obj \
+      $(BUILD_DIR)/src/Summon/summonCommands.obj \
+      $(BUILD_DIR)/src/Summon/SummonController.obj \
+      $(BUILD_DIR)/src/Summon/SummonModel.obj \
+      $(BUILD_DIR)/src/Summon/SummonView.obj \
       $(BUILD_DIR)/src/Summon/Graphic.obj \
       $(BUILD_DIR)/src/Summon/GroupTable.obj \
       $(BUILD_DIR)/src/Summon/Summon.obj \
