adding summatrix label windows

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,5 +8,6 @@ recursive-include doc *.html
 include bin/summon
 include bin/summatrix
 include bin/sumtree
+include bin/python-i
 prune src/Common/old
 prune src/notes
