--- a/Makefile.win
+++ b/Makefile.win
@@ -1,28 +1,63 @@
+#=============================================================================
+# Makefile for native windows install
+#
+
+#
+# Library configuration
+#
+# You will have to change these paths to your own setup
+#
+
+PYTHON_INCLUDE = -I/Python24/include
+SDL_INCLUDE = -I/dev/SDL-1.2.11/include
+GLUT_INCLUDE = -I/dev/OpenGLUT-0.6.3
+MSVS_INCLUDE = "-I/Program Files/Microsoft Visual Studio 8/VC/include"
+MSSDK_INCLUDE = "-I/Program Files/Microsoft Platform SDK for Windows Server 2003 R2/Include"
+
+
+PYTHON_LIB = /libpath:/Python24/libs python24.lib
+SDL_LIB = /libpath:/dev/SDL-1.2.11/lib SDL.lib
+GLUT_LIB = /libpath:/dev/OpenGLUT-0.6.3 OpenGLUT_static.lib
+MSVS_LIB = "/libpath:/Program Files/Microsoft Visual Studio 8/VC/lib"
+MSSDK_LIB = "/libpath:/Program Files/Microsoft Platform SDK for Windows Server 2003 R2/Lib"
+
+
+#=============================================================================
+# Compiler and Linker
+#
 CC=cl
 LINK=link
 
 
+
+#=============================================================================
+# Makefile targets
+#
+
 BUILD_DIR=build\windows
 SUMMON=build\lib.win32-2.4\summon_core.dll
+
+
 
 INCLUDE=\
     -Isrc/MVC \
     -Isrc/GlutMVC \
     -Isrc/Common \
     -Isrc/Summon \
-    "-I/Program Files/Microsoft Visual Studio 8/VC/include" \
-    -I/Python24/include \
-    -I/dev/SDL-1.2.11/include \
-    -I/dev/OpenGLUT-0.6.3 \
-    "-I/Program Files/Microsoft Platform SDK for Windows Server 2003 R2/Include"
+    $PYTHON_INCLUDE \
+    $SDL_INCLUDE \
+    $GLUT_INCLUDE \
+    $MSVS_INCLUDE \
+    $MSSDK_INCLUDE
     
-
+    
 LIBS=\
-    /libpath:/Python24/libs python24.lib \
-    /libpath:/dev/SDL-1.2.11/lib SDL.lib \
-    /libpath:/dev/OpenGLUT-0.6.3 OpenGLUT_static.lib \
-    "/libpath:/Program Files/Microsoft Visual Studio 8/VC/lib" \
-    "/libpath:/Program Files/Microsoft Platform SDK for Windows Server 2003 R2/Lib"
+    $PYTHON_LIB \
+    $SDL_LIB \
+    $GLUT_LIB \
+    $MSVS_LIB \
+    $MSSDK_LIB
+    
 
 OBJS=src/Common/Matrix.obj \
      src/Common/Script.obj \
@@ -88,7 +123,7 @@ compile: $(OBJS)
 
 
 build_dir:
-#	mkdir $(BUILD_DIR)
+	mkdir $(BUILD_DIR)
     mkdir $(BUILD_DIR)\lib
     mkdir $(BUILD_DIR)\src
     mkdir $(BUILD_DIR)\src\Summon
