--- a/src/Summon/Makefile
+++ b/src/Summon/Makefile
@@ -10,11 +10,11 @@ OBJS = summonCommands.o \
        TransformMatrix.o \
        Summon.o 
 
-all: $(PROG)
+all:: $(MODULE)
 
 include ../Makefile.in
 
 
-$(PROG): $(OBJS) $(MY_LIBS)
-	$(CC) -shared $(OBJS) $(MY_LIBS) $(LIBS) -o $(PROG)
+$(MODULE): $(OBJS) $(MY_LIBS)
+	$(CC) -shared $(OBJS) $(MY_LIBS) $(LIBS) -o $(MODULE)
 
