added code for building all elements

--- a/src/Summon/Makefile
+++ b/src/Summon/Makefile
@@ -6,6 +6,8 @@ OBJS = summonCommands.o \
        Element.o \
        Graphic.o \
        GroupTable.o \
+       Hotspot.o \
+       TextElement.o \
        Transform.o \
        TransformMatrix.o \
        Summon.o 
