--- a/doc/Makefile
+++ b/doc/Makefile
@@ -1,23 +1,24 @@
 IMAGES = 
 PAPER = summon_manual
 TEX = $(PAPER).tex
-DVI = $(PAPER).dvi
 PDF = $(PAPER).pdf
 
+all: toc html
 
-$(PDF): $(TEX) $(IMAGES) reference.tex
-	pdflatex $(TEX)
 
 toc:
 	pdflatex $(TEX)
 	pdflatex $(TEX)
         
+html:
+	./make.sh
+
+
+$(PDF): $(TEX) $(IMAGES)
+	pdflatex $(TEX)
 
 $(IMAGES) : %.pdf: %.eps
 	epstopdf $<
-
-reference.tex: help.py
-	python help.py > reference.tex
 
 clean:
 	rm -rf $(PDF) $(IMAGES)
