last minor changes for summon-1.8

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -5,6 +5,7 @@ include Makefile
 include Makefile.cygwin
 include Makefile.win
 include winsh.bat
+include setup-macosx.py
 recursive-include examples *.*
 recursive-include examples README*
 recursive-include src *.cpp *.h Makefile*
