--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -14,6 +14,7 @@ recursive-include examples *.*
 recursive-include examples README*
 recursive-include src *.cpp *.h Makefile*
 include doc/summon_manual.pdf
+recursive-include doc *.html
 recursive-include doc/html *.*
 include bin/summon
 include bin/summatrix
