--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -45,6 +45,9 @@ $(SRCPREFIX)/GlutMVC/libGlutMVC.a::
 $(SRCPREFIX)/MVC/libMVC.a::
 	make -C $(SRCPREFIX)/MVC
 
+$(SRCPREFIX)/SummonSceneGraph/libSummonSceneGraph.a::
+	make -C $(SRCPREFIX)/SummonSceneGraph
+
 $(SRCPREFIX)/Summon/$(MODULE)::
 	make -C $(SRCPREFIX)/Summon
 
