more file reorganization

--- a/src/Common/Makefile
+++ b/src/Common/Makefile
@@ -1,7 +1,7 @@
 SRCPREFIX = ..
 LIB = libCommon.a
-OBJS =  Script.o \
-        ScriptCommand.o \
+OBJS = common.o \
+       Script.o
 
 all: $(LIB)
 
