--- a/src/Common/Makefile
+++ b/src/Common/Makefile
@@ -1,9 +1,9 @@
-SRCPREFIX = ..
+SRCPREFIX = ../..
 LIB = libCommon.a
 OBJS =  Script.o \
         ScriptCommand.o \
 
 all: $(LIB)
 
-include ../Makefile.in
+include ../../Makefile.in
 
