--- a/src/MVC/Makefile
+++ b/src/MVC/Makefile
@@ -1,4 +1,4 @@
-SRCPREFIX = ..
+SRCPREFIX = ../..
 LIB=libMVC.a
 OBJS = \
         Binding.o \
@@ -10,4 +10,4 @@ OBJS = \
 
 all: $(LIB)
 
-include ../Makefile.in
+include ../../Makefile.in
