--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,18 +1,18 @@
-include *.txt
+include CHANGES
 include COPYING
 include COPYING.LESSER
-include README
-include CHANGES
+include LICENSE
 include INSTALL
+include README
 include Makefile
 include Makefile.cygwin
-include Makefile.win
-include winsh.bat
+include Makefile.mingw
+include make-wininst.bat
 include setup-macosx.py
 include setup-windows.py
-recursive-include examples *.*
-recursive-include examples README*
+recursive-include examples *.* README*
 recursive-include src *.cpp *.h Makefile*
+recursive-include windows *
 include doc/summon_manual.pdf
 recursive-include doc *.html
 recursive-include doc/html *.*
