--- a/Makefile.pkg
+++ b/Makefile.pkg
@@ -3,9 +3,11 @@ include Makefile
 
 #=============================================================================
 # packaging 
+VERSION=1.8.5
+PYTHON_VERSION=2.4
 PACKAGE=summon-$(VERSION).tar.gz
 RPM=summon-$(VERSION)-1.i386.rpm
-WININST=summon-$(VERSION).win32-py2.4.exe
+WININST=summon-$(VERSION).win32-py$(PYTHON_VERSION).exe
 WWWDIR=/scratch-sm/www/pub/summon
 WWWHOST=rasmus@compbio.mit.edu
 
